Dual-stack docs for Kubernetes 1.20
Co-authored-by: Bridget Kromhout <bridget@kromhout.org>
Signed-off-by: Lachlan Evenson <lachlan.evenson@microsoft.com>

--- a/content/en/examples/service/networking/dual-stack-preferred-ipfamilies-svc.yaml
+++ b/content/en/examples/service/networking/dual-stack-preferred-ipfamilies-svc.yaml
@@ -3,7 +3,10 @@ kind: Service
 metadata:
   name: my-service
 spec:
-  ipFamily: IPv4
+  ipFamilyPolicy: PreferDualStack
+  ipFamilies:
+  - IPv6
+  - IPv4
   selector:
     app: MyApp
   ports:
