--- a/content/en/examples/service/networking/dual-stack-preferred-svc.yaml
+++ b/content/en/examples/service/networking/dual-stack-preferred-svc.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-service
+  labels:
+    app: MyApp
 spec:
   ipFamilyPolicy: PreferDualStack
   selector:
