--- a/content/en/examples/service/networking/dual-stack-preferred-ipfamilies-svc.yaml
+++ b/content/en/examples/service/networking/dual-stack-preferred-ipfamilies-svc.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-service
+  labels:
+    app: MyApp
 spec:
   ipFamilyPolicy: PreferDualStack
   ipFamilies:
@@ -12,4 +14,3 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 9376
