--- a/content/id/examples/service/networking/dual-stack-preferred-svc.yaml
+++ b/content/id/examples/service/networking/dual-stack-preferred-svc.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: my-service
+  labels:
+    app: MyApp
 spec:
   ipFamilyPolicy: PreferDualStack
   selector:
@@ -9,4 +11,3 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 9376
